more spacing and fixed hovering

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -134,6 +134,11 @@ li
 .aside-text
     font-size: 20x
 
+.aside-text-main
+    line-height: 27px
+    letter-spacing: -1px
+    font-family: "Source Serif Pro", serif
+
 .author
     font-size: 10px
     border-bottom: 0.5px solid rgba(180,180,180,0.5)
